squash! more fixups

--- a/packages/fxa-react/components/LoadingSpinner/index.scss
+++ b/packages/fxa-react/components/LoadingSpinner/index.scss
@@ -9,7 +9,5 @@
 }
 
 .spinner-image {
-  width: 36px;
-  height: 36px;
   animation: rotate 0.8s linear infinite;
 }
